--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
 
   <body>
     <div class="wrap">
-      <div class="header"></div>
+      <div class="header">
+        <ul>
+          <li>
+            <a class="link top-link" href="https://mail.google.com/mail/&ogbl">Gmail</a>
+          </li>
+          <li>
+            <a class="link top-link" href="https://www.google.com/imghp?hl=en&ogbl"
+              >Images</a
+            >
+          </li>
+          <li>
+            <div class="apps-wrap">
+            <a class="apps" href=""><img src="/images/apps.png" alt="apps"></a>
+          </div>
+          </li>
+          <li>
+            <a class="sign-in" href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/%3Fsafe%3Dimages&ec=GAZAmgQ">Sign In</a>
+          </li>
+        </ul>
+      </div>
       <div class="logo"></div>
       <div class="search"></div>
       <div class="buttons"></div>
@@ -19,24 +38,29 @@
           <ul>
             <li>
               <a
+                class="link"
                 href="https://about.google/?utm_source=google-RS&utm_medium=referral&utm_campaign=hp-footer&fg=1"
                 >About</a
               >
             </li>
             <li>
               <a
+                class="link"
                 href="https://www.google.com/intl/en_rs/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
                 >Advertising</a
               >
             </li>
             <li>
               <a
+                class="link"
                 href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1"
                 >Business</a
               >
             </li>
             <li>
-              <a href="https://google.com/search/howsearchworks/?fg=1"
+              <a
+                class="link"
+                href="https://google.com/search/howsearchworks/?fg=1"
                 >How Search Works</a
               >
             </li>
@@ -45,16 +69,20 @@
         <div class="bottom-right">
           <ul>
             <li>
-              <a href="https://policies.google.com/privacy?hl=en-RS&fg=1"
+              <a
+                class="link"
+                href="https://policies.google.com/privacy?hl=en-RS&fg=1"
                 >Privacy</a
               >
             </li>
             <li>
-              <a href="https://policies.google.com/terms?hl=en-RS&fg=1"
+              <a
+                class="link"
+                href="https://policies.google.com/terms?hl=en-RS&fg=1"
                 >Terms</a
               >
             </li>
-            <li><a href="">Settings</a></li>
+            <li><a class="link" href="">Settings</a></li>
           </ul>
         </div>
       </div>
