Add search and submit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <div class="wrap">
       <div class="header">
         <ul>
           <li>
@@ -30,9 +29,22 @@
           </li>
         </ul>
       </div>
-      <div class="logo"></div>
-      <div class="search"></div>
-      <div class="buttons"></div>
+      <div class="logo">
+        <img src="/images/logo.png" alt="logo">
+      </div>
+      <div class="search-wrap">
+        <div class="search">
+          <img src="/images/search.png" alt="search">
+        </div>
+        <input class="input" type="text">
+        <div class="mic">
+          <img src="/images/mic.png" alt="mic">
+        </div>
+      </div>
+      <div class="buttons">
+        <input type="submit" class="submit" value="Google Search">
+        <input type="submit" class="submit" value="I'm Feeling Lucky">
+      </div>
       <div class="footer">
         <div class="bottom-left">
           <ul>
@@ -61,7 +73,7 @@
               <a
                 class="link"
                 href="https://google.com/search/howsearchworks/?fg=1"
-                >How Search Works</a
+                >How Search works</a
               >
             </li>
           </ul>
@@ -86,6 +98,5 @@
           </ul>
         </div>
       </div>
-    </div>
   </body>
 </html>
